Fixed navbar collapsing bug on iPad sizes

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -51,7 +51,7 @@ button {
   margin: 0 !important;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 575px) {
 
   .launch-description {
     display: none;
